# ibl-aws

./: .gitignore  README.md  pyproject.toml  template.env
examples/: add_prefix_list_researcher.py  aws_sorting.py  lightningai_job_api.py  update_prefix_list.py  update_prefix_list_devs.py  update_security_group_rule.py
pipelines/iblsorter/: aws_sorting_g4.py  entrypoint.sh
pipelines/iblsorter/aws/: README.md  entrypoint.sh
pipelines/iblsorter/lightningai/: spike_sort_aws.py  spike_sort_gcp.py
src/: ibllightning.py
src/iblaws/: compute.py  utils.py
src/tests/: test_compute.py
